[package]
name = "nixtracker-rs"
version = "0.1.0"
edition = "2024"
description = "A fast system information tool inspired by fastfetch"
license = "GPL-3.0"
repository = "https://github.com/liberodark/nixtracker-rs"
readme = "README.md"
keywords = ["fastfetch", "system-info", "neofetch", "terminal", "cli"]
categories = ["command-line-utilities", "os", "config"]

[dependencies]
hyper = { version = "1.8", features = ["server", "http1", "http2"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
http-body-util = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
maud = "0.27"
directories = "6.0"
governor = "0.10"
lru = "0.16"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
